# fairface-gender-age-clothing-model

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
